# gbrainy

./: .gitlab-ci.yml  Makefile.am  NEWS  README  RELEASE-PROCESS  autogen.sh  configure.ac  gbrainy.doap
data/: Makefile.am  games.xml  gbrainy.6  gbrainy.appdata.xml.in  gbrainy.desktop.in  verbal_analogies.xml
help/: Makefile.am
help/C/: customgame.page  gameplay.page  gametypes.page  index.page  license.page  newgame.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/hu/: hu.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/uk/: uk.po
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  ast.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ko.po  lv.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  (+10 more)
sample_extensions/: README
sample_extensions/Calculation/: CalculationSample.cs
sample_extensions/Logic/: PuzzleSample.cs
sample_extensions/Memory/: MemorySample.cs
src/Clients/Classical/: AssemblyInfo.cs.in  CommandLine.cs  Defines.cs.in  GtkSynchronize.cs  Makefile.am  MonoAddinsStrings.cs  gbrainy.cs  gbrainy.exe.config.in  gbrainy.ui
src/Clients/Classical/Builder/: Builder.cs
src/Clients/Classical/Dialogs/: AboutDialog.cs  BuilderDialog.cs  CustomGameDialog.cs  HigMessageDialog.cs  PdfExportDialog.cs  PlayerHistoryDialog.cs  PreferencesDialog.cs
src/Clients/Classical/Dialogs/ui/: CustomGameDialog.ui  PdfExportDialog.ui  PlayerHistoryDialog.ui  PreferencesDialog.ui
src/Clients/Classical/Widgets/: BrowseFile.cs  GameDrawingArea.cs  Toolbar.cs
src/Clients/WebForms/: AllGames.aspx.cs  AssemblyInfo.cs.in  Default.aspx.cs  Defines.cs  Download.aspx  Download.aspx.cs  Game.aspx.cs  GameImage.cs  GameImageAreaShape.cs  Global.asax.cs  Help.aspx  Help.aspx.cs  LanguageSupport.cs  Logger.cs  Makefile.am  MasterPage.master  MasterPage.master.cs  Status.aspx.cs  TranslationsWeb.cs
src/Core/: AssemblyInfo.cs.in  Core.csproj  Makefile.am  gbrainy.Core.dll.config.in
src/Core/Libraries/: CSharpCompiler.cs  CSharpCompilerStatic.cs  CSharpCompilerStaticDomainProxy.cs  CairoContext.cs  GetText.cs  SVGImage.cs  TranslationsCatalog.cs
src/Core/Main/: ArrayListIndicesRandom.cs  CairoContextEx.cs  ColorPalette.cs  Defines.cs.in  Game.cs  GameAnswer.cs  GameAnswerCheckAttributes.cs  GameAnswerEventArgs.cs  GameDifficulty.cs  GameLocator.cs  GameManager.cs  GameSession.cs  GameSessionHistory.cs  GameSessionHistoryExtended.cs  GameSessionPlayList.cs  GameTips.cs  GameTypes.cs  IDrawRequest.cs  IDrawable.cs  IMouseEvent.cs  Memory.cs  PdfExporter.cs  PlayerHistory.cs  PlayerPersonalRecord.cs  Preferences.cs  PreferencesStorage.cs  Score.cs  Theme.cs  ThemeManager.cs  UpdateUIStateEventArgs.cs
src/Core/Main/Verbal/: Analogies.cs  AnalogiesFactory.cs  AnalogiesMultipleOptions.cs  AnalogiesPairOfWordsCompare.cs  AnalogiesPairOfWordsOptions.cs  AnalogiesQuestionAnswer.cs  Analogy.cs
src/Core/Main/Xml/: DrawingObject.cs  GameXml.cs  GameXmlDefinition.cs  GameXmlDefinitionVariant.cs  GameXmlDrawing.cs  GameXmlFactory.cs  ImageDrawingObject.cs  LocalizableString.cs  OptionDrawingObject.cs  TextDrawingObject.cs
src/Core/Platform/: Unix.cs
src/Core/Services/: DefaultServices.cs  ICSharpCompiler.cs  IConfiguration.cs  IService.cs  ITranslations.cs  MemoryConfiguration.cs  ServiceLocator.cs
src/Core/Toolkit/: Container.cs  DrawEventArgs.cs  DrawableArea.cs  HorizontalContainer.cs  SelectedEventArgs.cs  Widget.cs
src/Core/Views/: CountDownView.cs  FinishView.cs  PlayerHistoryView.cs  ViewsControler.cs  WelcomeView.cs
src/Games/: AssemblyInfo.cs.in  GameList.cs  Games.csproj  Makefile.am
src/Games/Calculation/: CalculationArithmetical.cs  CalculationAverage.cs  CalculationCloserFraction.cs  CalculationConsecutiveSum.cs  CalculationFractions.cs  CalculationGreatestDivisor.cs  CalculationOperator.cs  CalculationPrimes.cs  CalculationProportions.cs  CalculationRatio.cs  CalculationSelectedNumbers.cs  CalculationTwoNumbers.cs
src/Games/Logic/: Puzzle3DCube.cs  PuzzleBalance.cs  PuzzleBuildTriangle.cs  PuzzleCirclesSquare.cs  PuzzleClocks.cs  PuzzleCountCircles.cs  PuzzleCountSeries.cs  PuzzleCounting.cs  PuzzleCoverPercentage.cs  PuzzleCube.cs  PuzzleDice.cs  PuzzleDivideCircle.cs  PuzzleEquation.cs  PuzzleExtraCircle.cs  PuzzleFigureLetter.cs  PuzzleFigurePattern.cs  PuzzleFigures.cs  PuzzleFindTheNumber.cs  PuzzleFourSided.cs  PuzzleGridCircles.cs  PuzzleGridDots.cs  PuzzleGridNumbers.cs  PuzzleHandshakes.cs  PuzzleLargerShape.cs  PuzzleLargestArea.cs  PuzzleLargestDiameter.cs  PuzzleLines.cs  PuzzleMissingPiece.cs  PuzzleMissingSlice.cs  PuzzleMostInCommon.cs  PuzzleMoveFigure.cs  PuzzleNextFigure.cs  PuzzleNumericRelation.cs  PuzzleNumericSequence.cs  PuzzleOstracism.cs  PuzzlePencil.cs  PuzzlePeopleTable.cs  PuzzlePercentage.cs  PuzzlePredicateLogic.cs  PuzzleQuadrilaterals.cs  (+9 more)
src/Games/Memory/: MemoryColouredFigures.cs  MemoryColouredText.cs  MemoryCountDots.cs  MemoryFaces.cs  MemoryFacts.cs  MemoryFiguresAndText.cs  MemoryFiguresNumbers.cs  MemoryIndications.cs  MemoryNumbers.cs  MemoryWords.cs
tests/: Makefile.am
tests/Clients/Classical/: CommandLineTest.cs  gbrainyTest.cs
tests/Core/: AnalogiesFactoryTest.cs  GameAnswerTest.cs  GameManagerTest.cs  GameSessionPlayListTest.cs  GameSessionTest.cs  GameXmlFactoryTest.cs  PlayerHistoryTest.cs  PlayerPersonalRecordTest.cs  PreferencesTest.cs
tests/Games/Logic/: PuzzleNumericRelationTest.cs
tests/TestSupport/: UnitTestSupport.cs
tools/: Defines.cs.in  GameXmlGetString.cs  GameXmlGetStringTemplate.cs  GameXmlToAssembly.cs  GameXmlToGetString.cs  GamesStatistics.cs  Makefile.am  README  TranslationsChecker.cs
