SUBDIRS = 		\
	src		\
	tests		\
	data		\
	tools		\
	po		\
	help


CLEANFILES =			\
	intltool-extract	\
	intltool-update		\
	intltool-merge

EXTRA_DIST =			\
	MAINTAINERS		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in

DISTCLEANFILES = \
        intltool-extract        \
        intltool-merge          \
        intltool-update
