@YELP_HELP_RULES@

HELP_ID = gbrainy

HELP_MEDIA = \
	figures/all-games.png		\
	figures/logic-games.png		\
	figures/memory-games.png	\
	figures/gbrainy.png		\
	figures/math-games.png		\
	figures/verbal-games.png	


HELP_FILES = \
	customgame.page	\
	gametypes.page	\
	license.page	\
	pause.page	\
	tips.page	\
	difficulty.page	\
	history.page	\
	multiplayer.page \
	score.page	\
	gameplay.page	\
	index.page	\
	newgame.page	\
	times.page	\
	export.page

HELP_LINGUAS = af ca cs da de el es fr gl hi hu it nl pl pt_BR ro ru sl sr sr@latin sv
